--- a/comics.css
+++ b/comics.css
@@ -1,12 +1,23 @@
 .comics {
     background-image: url("img/comics-bg.jpg");
-    height: 100vh;
-    width: auto;
+    height: 90vh;
+    width:99%;
    
     background-repeat: no-repeat;
     background-position: center center; 
-    
-    
-    
 
 }
+
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    background-color: rgba(2, 214, 242, 0);
+    border: none;
+   
+  }
+
+  i {
+    color: #03D8F3;
+  }
