--- a/edgerunners.css
+++ b/edgerunners.css
@@ -1,15 +1,12 @@
-
-
-
 .edgerunners-bg {
     background-image: url("img/edgerunners-bg.jpg");
     height: 100vh;
     width: 100%;
     
-    /* background-repeat: no-repeat;
-    background-position: end center; */
+     background-repeat: no-repeat;
+    background-position: end center; 
     background-attachment: fixed;
-    object-fit: cover;
+    /* object-fit: cover; */
 
 }
 
@@ -29,7 +26,7 @@
     padding: 30px 0;
     color: #000000;
     font-weight: bold;
-    font-size: 4rem;
+    font-size: 3.5rem;
     } 
 
 .h2_main-text:before, .h2_main-text:after { 
@@ -91,3 +88,30 @@
             bottom: 0;
             margin-left: -13.8px;
              }  
+
+.characters   {
+    text-decoration: none;
+    list-style: none;
+}
+.characters  {
+    list-style-type: none;
+}
+.characters:hover    {
+    text-decoration: underline;
+    color: rgb(149, 235, 12);
+}
+
+
+ul li {
+    text-decoration: none;
+    list-style: none;
+}
+
+@media screen and (max-width: 1200px) {
+    .edgerunners-bg {
+       
+        background-position: center center; 
+       
+    
+    }
+  }
