--- a/style.css
+++ b/style.css
@@ -3,34 +3,35 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
+
 @font-face {
     font-family: 'Cyberpunk';
-    src: url('fonts/Cyberpunk.ttf');     
+    src: url('fonts/Cyberpunk.ttf');
     font-weight: normal;
     font-style: normal;
 }
 
 ::-webkit-scrollbar {
     width: 10px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: black; 
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-      background: #fcee09; 
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: black;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #fcee09;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
 
 ::-webkit-scrollbar-track {
-    background: #111110; 
+    background: #111110;
 }
 
 #nav-bar {
@@ -46,7 +47,7 @@ body {
     width: 100%;
 }
 
-.navbar ul li  {
+.navbar ul li {
     font-size: 1.5rem;
     letter-spacing: 1px;
     padding-right: 20px;
@@ -64,25 +65,26 @@ body {
 .video {
     min-height: 80vh;
     width: 100%;
-} 
+}
+
 video {
     object-fit: cover;
     position: absolute;
-  }
-  
+}
+
 .video-bg {
     height: 100vh;
     width: 100%;
-    position: relative; 
+    position: relative;
 }
 
 #video {
-  position: fixed;
-  right: 0;
-  top: 0;
-  min-width: 100%;
-  min-height: 100%;
-  z-index: -1;
+    position: fixed;
+    right: 0;
+    top: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1;
 }
 
 @media (min-aspect-ratio: 16/9) {
@@ -99,21 +101,20 @@ video {
     }
 }
 
-
 /* gallery */
+
 .gallery {
     background-color: black;
 }
 
 .gallery-box img {
     width: 350px;
-    height: auto;    
+    height: auto;
 }
-
 
 /* testimonial */
 
-.testimonial {   
+.testimonial {
     height: 80vh;
     position: relative;
     z-index: 2;
@@ -121,18 +122,13 @@ video {
     overflow: hidden;
 }
 
-.delamain-img  {
+.delamain-img {
     width: 900px;
     display: block;
-    position: absolute; 
+    position: absolute;
     bottom: -50;
-    right: 0; 
-    z-index: -3;   
-}
-
-.rogue-section {
-    /* z-index: 2; */
-    /* position: relative; */
+    right: 0;
+    z-index: -3;
 }
 
 .text-yellow {
@@ -143,8 +139,8 @@ video {
     background-color: #fcee09;
 }
 
-.cyber_background{
-    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
+.cyber_background {
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
     border-radius: 5px;
     background-image: url("img/bg.jpg");
     filter: blur(6px);
@@ -153,16 +149,13 @@ video {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    
-
 }
 
 .cyber_content {
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0, 0.4); 
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
     color: white;
     font-weight: bold;
-    /* border: 3px solid #f1f1f1; */
     position: absolute;
     top: 50%;
     left: 50%;
@@ -170,15 +163,14 @@ video {
     z-index: 2;
     width: 98%;
     padding: 20px;
-    /* text-align: center; */
 }
 
 .cyber_section_h1 {
     font-weight: bold;
 }
 
-.h2_portfolio { 
-    display: flex; 
+.h2_portfolio {
+    display: flex;
     flex-direction: row;
     margin: 0 auto;
     width: 74%;
@@ -186,77 +178,79 @@ video {
     color: #fcee09;
     font-weight: bold;
     font-size: 4rem;
-} 
+}
 
-.h2_portfolio:before, .h2_portfolio:after { 
+.h2_portfolio:before,
+.h2_portfolio:after {
     content: "";
-     flex: 1 1;
-      border-bottom: 1px solid #fcee09;
-       margin: auto; 
-    } 
+    flex: 1 1;
+    border-bottom: 1px solid #fcee09;
+    margin: auto;
+}
 
-.h2_portfolio:before { margin-right: 10px; } 
-.h2_portfolio:after { margin-left: 10px; } 
+.h2_portfolio:before {
+    margin-right: 10px;
+}
+
+.h2_portfolio:after {
+    margin-left: 10px;
+}
 
 .cards-version-cyber {
     border-radius: 0;
     border: 4px solid #FCEE09;
-     /* background-color: linear-gradient(180deg, black) #FCEE09; */
     background: rgb(0, 0, 0);
     transition: background-color 3s;
 }
 
-.cards-version-cyber:hover, .cards-version-cyber:focus {
-/*     
-    animation-name: example;
-    animation-duration: 4s;
-    animation-delay: 2s; */
+.cards-version-cyber:hover,
+.cards-version-cyber:focus {
+
     background: linear-gradient(180deg, #000000, transparent) #f8f804;
-   
+
 }
 
-/* @keyframes example {
-    from {background-color: black;}
-    to {background: rgb(0,0,0);
-        background: linear-gradient(0deg, rgba(0,0,0,1) 76%, rgba(252,238,9,1) 100%);}
-  } */
+
 
 @media (max-width: 1350px) {
-    .navbar ul li  {
+    .navbar ul li {
         font-size: 1em;
-     
-       
-    
+
     }
 
-    .delamain-img  {
+    .delamain-img {
         width: 700px;
     }
 
 
 }
+
 @media (max-width: 1200px) {
-    .cyber_background{
-      
+
+    .cyber_background {
         height: 120vh;
-      
-        
-    
     }
- 
+
+    /* EDGERUNNERS-------------------------------------------------- */
+    .edgerunners-bg {
+        background-position: center center;
+    }
+
 }
 
 @media (max-width: 1050px) {
-    .navbar ul li  {
+    .navbar ul li {
         font-size: 1em;
         font-weight: bold;
-    
+
     }
+
     .testimonial {
         height: auto;
     }
-    .delamain-img  {
-        display: none; 
+
+    .delamain-img {
+        display: none;
     }
 
 }
@@ -268,5 +262,214 @@ i {
 
 
 /* EDGERUNNERS-------------------------------------------------- */
+.edgerunners-bg {
+    background-image: url("img/edgerunners-bg.jpg");
+    height: 100vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: end center;
+    background-attachment: fixed;
+}
 
+.edgerunners-gif {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 400px;
+}
 
+.h2_main-text {
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+    width: 74%;
+    padding: 30px 0;
+    color: #000000;
+    font-weight: bold;
+    font-size: 3.5rem;
+}
+
+.h2_main-text:before,
+.h2_main-text:after {
+    content: "";
+    flex: 1 1;
+    border-bottom: 1px solid #000000;
+    margin: auto;
+}
+
+.h2_main-text:before {
+    margin-right: 10px;
+}
+
+.h2_main-text:after {
+    margin-left: 10px;
+}
+
+.thread-line {
+    border-left: 3px solid black;
+}
+
+.thread-line:before,
+.thread-line:after {
+    content: "";
+    height: 25px;
+    width: 25px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 100%;
+    display: inline-block;
+    position: absolute;
+    left: 0;
+}
+
+.thread-line:before {
+    margin-left: -13.8px;
+}
+
+.thread-line:after {
+    bottom: 0;
+    margin-left: -13.8px;
+}
+
+.characters {
+    text-decoration: none;
+    list-style: none;
+}
+
+.characters {
+    list-style-type: none;
+}
+
+.characters:hover {
+    text-decoration: underline;
+    color: rgb(149, 235, 12);
+}
+
+ul li {
+    text-decoration: none;
+    list-style: none;
+}
+
+@media screen and (max-width: 1200px) {
+    .edgerunners-bg {
+        background-position: center center;
+    }
+}
+
+/* COMICS------------------------------------------------------- */
+
+.comics {
+    background-image: url("img/comics-bg.jpg");
+    height: 90vh;
+    width: 99%;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    background-color: rgba(2, 214, 242, 0);
+    border: none;
+    z-index: 2;
+}
+
+#btn-back-to-top i {
+    color: #03D8F3;
+}
+
+/* GAME------------------------------------------------------- */
+:root {
+    --gradient: linear-gradient(to left top, #DD2476 10%, #FF512F 90%) !important;
+}
+
+.cyberpunk-main {
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(100% 11%, 100% 21%, 0 89%, 0 80%);
+    background-color: black;
+}
+
+.cyberpunk-wrapper {
+    background: rgb(3, 216, 243);
+    background: linear-gradient(349deg, rgba(3, 216, 243, 1) 01%, rgba(252, 238, 9, 1) 100%);
+}
+
+.v-content-wrapper {
+    width: 100%;
+}
+
+.v-section {
+    background-image: url("img/v.jpg");
+    height: 100vh;
+    width: 100.1vw;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    object-fit: cover;
+}
+
+.card {
+    background: #222;
+    border: 1px solid #dd2476;
+    color: rgba(250, 250, 250, 0.8);
+    margin-bottom: 2rem;
+}
+
+/* Buttons in cards corporations section */
+
+.btn-corpo-card {
+    border: 5px solid;
+    border-image-slice: 1;
+    background: var(--gradient) !important;
+    -webkit-background-clip: text !important;
+    -webkit-text-fill-color: transparent !important;
+    border-image-source: var(--gradient) !important;
+    text-decoration: none;
+    transition: all .4s ease;
+    padding: 12px 5px;
+}
+
+.btn-corpo-card:hover,
+.btn-corpo-card:focus {
+    background: var(--gradient) !important;
+    -webkit-background-clip: none !important;
+    -webkit-text-fill-color: #fff !important;
+    border: 5px solid #fff !important;
+    box-shadow: #222 1px 0 10px;
+    text-decoration: underline;
+}
+
+/* LORE------------------------------------------------------- */
+
+.boxes {
+    display: grid;
+    grid-template-columns: repeat(3, 20%);
+    column-gap: 15px;
+    height: 80vh;
+    position: relative;
+}
+
+.img-lore-bg {
+    top: 50%;
+    right: 0%;
+    width: 700px;
+    height: 500px;
+    margin-top: -250px;
+    margin-right: -250px;
+    display: block;
+    position: absolute;
+}
+
+.box-1 {
+    background-color: #FCEE0C;
+}
+
+.box-2 {
+    background-color: #000000;
+}
+
+.box-3 {
+    background-color: #03D8F3;
+}
